--- a/frontend/src/app/css/styles.css
+++ b/frontend/src/app/css/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     text-align: center;
     margin-top: 50px;
-    background-color: #f0f0f0; /* Color de fondo suave */
+    background-color: #f0f0f0;
 }
 
 h1 {
@@ -15,15 +15,15 @@ h2 {
 
 #co2Value, #tempValue {
     font-weight: bold;
-    font-size: 1.5em; /* Aumentar el tamaño del texto */
-    color: #333; /* Color del texto */
+    font-size: 1.5em;
+    color: #333;
     margin: 10px 0;
 }
 
 p {
-    background-color: #ffffff; /* Fondo blanco para los textos */
+    background-color: #ffffff;
     padding: 10px;
-    border-radius: 5px; /* Bordes redondeados */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra sutil */
-    display: inline-block; /* Ajusta el ancho del fondo */
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+    display: inline-block;
 }
